Finalize custom project illustrations and layout

--- a/index.html
+++ b/index.html
@@ -46,25 +46,25 @@
     <div class="grid">
       <article class="card">
         <h2>Nutrition Cost Analysis</h2>
-        <img src="assets/nutrition_cost_analysis.png" alt="Illustration for Nutrition Cost Analysis">
+        <img src="assets/nutrition.png" alt="Illustration for Nutrition Cost Analysis">
         <p>Explore cost-per-calorie and macronutrient value with this Tableau dashboard.</p>
         <a href="#">View on GitHub</a>
       </article>
       <article class="card">
         <h2>Loan Risk Fraud Signal Tool</h2>
-        <img src="assets/loan_risk_fraud_signal_tool.png" alt="Illustration for Loan Risk Fraud Signal Tool">
+        <img src="assets/fraud.png" alt="Illustration for Loan Risk Fraud Signal Tool">
         <p>Python + SQL project for uncovering fraud signals and identifying high-risk loan profiles.</p>
         <a href="#">View on GitHub</a>
       </article>
       <article class="card">
         <h2>Application Pipeline Dashboard</h2>
-        <img src="assets/application_funnel_tracker.png" alt="Illustration for Application Funnel Tracker">
+        <img src="assets/pipeline.png" alt="Illustration for Application Funnel Tracker">
         <p>A front-end dashboard for monitoring conversion KPIs and dropoff points.</p>
         <a href="#">View on GitHub</a>
       </article>
       <article class="card">
         <h2>Cross-Channel Contact Audit</h2>
-        <img src="assets/cross_channel_contact_audit.png" alt="Illustration for Cross-Channel Contact Audit">
+        <img src="assets/contact.png" alt="Illustration for Cross-Channel Contact Audit">
         <p>Visual breakdown of customer communications across chat, phone, and email platforms.</p>
         <a href="#">View on GitHub</a>
       </article>
